--- a/style.css
+++ b/style.css
@@ -10,8 +10,33 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
 }
-.Archivo {
+.Archivo,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Archivo Black', sans-serif;
+  line-height: 1.2;
+}
+h1 {
+  font-size: 64px;
+}
+h2 {
+  font-size: 54px;
+}
+h3 {
+  font-size: 40px;
+}
+h4 {
+  font-size: 32px;
+}
+h5 {
+  font-size: 28;
+}
+h6 {
+  font-size: 22px;
 }
 .btn {
   height: 48px;
@@ -104,6 +129,7 @@ footer.main-footer .container {
   flex-wrap: wrap;
   gap: 40px;
   justify-content: space-between;
+  align-items: flex-start;
 }
 footer.main-footer .left {
   display: flex;
@@ -140,11 +166,11 @@ section.home-hero .logo {
 }
 section.home-hero .headline {
   font-size: 64px;
-  font-family: 'Archivo Black', sans-serif;
   width: 100%;
   max-width: 600px;
   margin: 0 auto 30px;
   line-height: 1;
+  color: #fff;
 }
 section.home-hero .contents {
   width: 100%;
@@ -229,25 +255,20 @@ section.map-area .left-overlap h3 {
   font-size: 32px;
   line-height: 1;
 }
-
 .race-status p {
   margin-bottom: 10px;
 }
-
 .race-status p.m {
   display: flex;
   gap: 10px;
   align-items: flex-end;
 }
-
 .race-status p.m span {
   font-size: 56px;
 }
-
 .race-status p:last-child {
   margin: 0;
 }
-
 .race-start {
   position: absolute;
   right: 50px;
@@ -260,11 +281,9 @@ section.map-area .left-overlap h3 {
   padding: 10px 20px;
   width: 300px;
 }
-
 .race-start p {
   margin-bottom: 10px;
 }
-
 .race-start h4 {
   font-size: 32px;
 }
@@ -275,9 +294,8 @@ section.award {
   background-color: #fdfcf8;
   padding: 100px 0;
 }
-section.award .headline {
+.headline {
   text-align: center;
-  font-family: 'Archivo Black', sans-serif;
   font-size: 56px;
   margin-bottom: 50px;
   color: #222121;
@@ -313,10 +331,149 @@ section.award .award-grid .wrap {
   min-height: 90px;
   padding-left: 15px;
 }
-section.award .award-grid div:last-child {
+section.award .award-grid .item div:last-child {
   margin-bottom: 0;
 }
-section.award .award-grid div:last-child img {
+section.award .award-grid .item div:last-child img {
   margin-top: -15px;
 }
 /*=============== Award CSS =============== */
+
+/*=============== How to Enter CSS =============== */
+section.how-to-enter {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 0;
+}
+.how-to-enter-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px 50px;
+}
+.how-to-enter-grid .item {
+  background-color: #fff;
+  border-radius: 23px;
+  padding: 20px 20px 70px;
+  text-align: center;
+  box-shadow: 2px 3px 0px rgba(0, 0, 0, 0.16);
+  position: relative;
+}
+.how-to-enter-grid .item .count {
+  background-color: #222121;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 40px;
+  font-family: 'Archivo Black', sans-serif;
+  margin-bottom: 20px;
+}
+.how-to-enter-grid .item .title {
+  font-size: 32px;
+  line-height: 1.2;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+.how-to-enter-grid .item .price {
+  display: inline-flex;
+  width: max-content;
+  border-radius: 6px;
+  border: 2px dashed #707070;
+  text-align: left;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 10px 15px;
+  gap: 8px;
+  margin-bottom: 20px;
+}
+.how-to-enter-grid .item .price span {
+  font-size: 48px;
+  line-height: 1;
+  font-family: 'Archivo Black', sans-serif;
+}
+.how-to-enter-grid .item .btn {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: max-content;
+}
+.how-to-enter-grid .item .contents {
+  text-align: left;
+  width: 100%;
+  max-width: 260px;
+  margin: auto;
+}
+/*=============== How to Enter CSS =============== */
+
+/*=============== Have Questions CSS =============== */
+section.have-questions {
+  background-color: #222121;
+  padding: 70px 0;
+}
+section.have-questions .container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 60px;
+  color: #fff;
+  max-width: 950px;
+}
+section.have-questions .left {
+  display: flex;
+}
+section.have-questions h3 {
+  margin-bottom: 20px;
+}
+section.have-questions .contents-wrap {
+  margin-bottom: 20px;
+}
+/*=============== Have Questions CSS =============== */
+/*=============== Left Image Right Contents CSS =============== */
+section.left-image-contents {
+  padding: 120px 0;
+}
+section.left-image-contents .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 50px;
+  align-items: center;
+}
+section.left-image-contents .image-wrap {
+  display: flex;
+}
+section.left-image-contents .image-wrap img {
+  width: 100%;
+  height: 100%;
+}
+section.left-image-contents h2 {
+  font-size: 48px;
+  margin-bottom: 20px;
+}
+section.left-image-contents .contents {
+  margin-bottom: 30px;
+}
+section.left-image-contents .btns-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 15px;
+}
+section.left-image-contents .btns-wrap .link {
+  color: #ff1010;
+  font-size: 20px;
+  text-decoration: none;
+}
+section.left-image-contents .btns-wrap .link:hover {
+  text-decoration: underline;
+}
+section.left-image-contents.why-involved {
+  background-color: #faf9f5;
+}
+/*=============== Left Image Right Contents CSS =============== */
