--- a/style.css
+++ b/style.css
@@ -306,6 +306,7 @@ section.award .award-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
+  gap: 30px;
 }
 section.award .award-grid .logo {
   justify-content: center;
@@ -333,10 +334,10 @@ section.award .award-grid .wrap {
   min-height: 90px;
   padding-left: 15px;
 }
-section.award .award-grid .item div:last-child {
+section.award .award-grid .item .bottom div:last-child {
   margin-bottom: 0;
 }
-section.award .award-grid .item div:last-child img {
+section.award .award-grid .item .bottom div:last-child img {
   margin-top: -15px;
 }
 /*=============== Award CSS =============== */
@@ -718,4 +719,434 @@ section.places-to-stays .top-area .descriptions {
   padding: 0 20px;
   background-color: #707070;
   height: 1px;
+}
+@media screen and (max-width: 1279px) {
+  section.home-hero .headline {
+    font-size: 50px;
+  }
+
+  section.home-hero .logo img {
+    width: 100%;
+    max-width: 200px;
+  }
+
+  section.home-hero .contents {
+    font-size: 24px;
+  }
+
+  section.home-hero .btn {
+    height: 48px;
+    font-size: 24px;
+  }
+
+  section.timer .left {
+    font-size: 30px;
+  }
+
+  section.timer .left .date {
+    font-size: 42px;
+  }
+
+  section.timer .right {
+    font-size: 30px;
+  }
+
+  section.timer .right .countdown .item span:first-child {
+    font-size: 48px;
+  }
+
+  section.map-area .left-overlap {
+    padding: 30px 20px;
+    max-width: 300px;
+    font-size: 16px;
+  }
+
+  section.map-area .left-overlap h3 {
+    font-size: 42px;
+  }
+
+  .race-status {
+    font-size: 24px;
+    width: 280px;
+    padding: 20px;
+  }
+
+  .race-status p.m span {
+    font-size: 42px;
+  }
+
+  .race-start {
+    font-size: 16px;
+    width: 200px;
+  }
+
+  .race-start h4 {
+    font-size: 24px;
+    margin: 0;
+  }
+
+  section.map-area iframe {
+    height: 700px;
+  }
+
+  .headline {
+    font-size: 47px;
+  }
+
+  section.award .award-grid .logo {
+    height: 150px;
+  }
+
+  section.award .award-grid .logo img {
+    width: auto;
+    height: 100%;
+  }
+
+  section.award .award-grid .title {
+    font-size: 28px;
+  }
+
+  section.award .award-grid .wrap {
+    max-width: 255px;
+    font-size: 20px;
+    min-height: 78px;
+  }
+
+  section.award {
+    padding: 70px 0;
+  }
+
+  section.how-to-enter {
+    padding: 70px 0;
+  }
+
+  .how-to-enter-grid .item .price {
+    font-size: 14px;
+  }
+
+  .how-to-enter-grid .item .price span {
+    font-size: 35px;
+  }
+
+  .how-to-enter-grid .item .title {
+    font-size: 28px;
+  }
+
+  .how-to-enter-grid .item .count {
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .how-to-enter-grid {
+    gap: 25px 20px;
+  }
+  section.left-image-contents h2 {
+    font-size: 42px;
+  }
+
+  section.left-image-contents {
+    padding: 90px 0;
+  }
+
+  .btn {
+    font-size: 20px;
+  }
+
+  footer.main-footer .left .logo {
+    font-size: 20px;
+  }
+
+  footer.main-footer .left img.logo2 {
+    width: 130px;
+  }
+
+  footer.main-footer .left img.logo3 {
+    width: 110px;
+  }
+
+  footer.main-footer .left {
+    gap: 20px;
+  }
+
+  footer.main-footer .right {
+    width: 47%;
+    gap: 20px;
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  section.home-hero .contents {
+    font-size: 20px;
+  }
+
+  section.home-hero .headline {
+    font-size: 45px;
+  }
+
+  section.timer .right {
+    width: 100%;
+    justify-content: center;
+  }
+
+  section.timer .left {
+    width: 100%;
+    text-align: center;
+  }
+
+  .how-to-enter-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  section.have-questions .left {
+    width: 100%;
+  }
+
+  section.have-questions .left img {
+    width: 100%;
+  }
+
+  section.have-questions .right {
+    width: 100%;
+    text-align: center;
+    padding: 0 20px;
+  }
+
+  section.have-questions .container {
+    padding: 0;
+  }
+
+  section.left-image-contents .container {
+    grid-template-columns: 1fr;
+    padding: 0;
+  }
+
+  section.left-image-contents {
+    padding: 0 0 70px;
+  }
+
+  section.left-image-contents.why-involved .left {
+    order: 2;
+    padding: 0 20px;
+    text-align: center;
+  }
+
+  section.left-image-contents .right {
+    padding: 0 20px;
+    text-align: center;
+  }
+
+  section.left-image-contents .btns-wrap {
+    justify-content: center;
+  }
+
+  section.left-image-contents.why-involved .right {
+    padding: 0;
+  }
+
+  section.left-image-contents h2 {
+    font-size: 35px;
+  }
+
+  body {
+    font-size: 16px;
+  }
+
+  footer.main-footer .left {
+    width: 100%;
+    justify-content: center;
+    gap: 50px;
+  }
+
+  footer.main-footer .right {
+    width: 100%;
+    text-align: center;
+  }
+
+  footer.main-footer {
+    padding: 50px 0;
+  }
+  section.award .award-grid .wrap {
+    font-size: 17px;
+    min-height: 70px;
+  }
+
+  section.award .award-grid .item .bottom div:last-child img {
+    margin-top: -10px;
+  }
+  header.main-header .menu-wrap a {
+    display: none;
+  }
+  header.main-header .menu-wrap .btn {
+    display: inline-flex;
+  }
+}
+@media screen and (max-width: 767px) {
+  header.main-header .menu-wrap {
+    display: none;
+  }
+
+  section.home-hero .headline {
+    font-size: 40px;
+  }
+
+  section.home-hero .contents {
+    font-size: 18px;
+  }
+
+  section.timer .container {
+    justify-content: flex-start;
+  }
+
+  section.timer .left {
+    text-align: left;
+    font-size: 24px;
+  }
+
+  section.timer .right {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    font-size: 24px;
+  }
+
+  section.timer .right p br {
+    display: none;
+  }
+
+  section.timer .right .countdown {
+    gap: 40px;
+  }
+
+  section.timer {
+    padding: 30px 0;
+  }
+
+  section.map-area .left-overlap {
+    position: relative;
+    max-width: 100%;
+    top: 0;
+  }
+
+  section.map-area {
+    flex-wrap: wrap;
+  }
+
+  section.map-area iframe {
+    height: 620px;
+  }
+
+  .race-start {
+    bottom: auto;
+    top: 513px;
+    width: 300px;
+  }
+
+  .race-start h4 br {
+    display: none;
+  }
+
+  .race-start h4 {
+    font-size: 20px;
+  }
+
+  .race-status {
+    font-size: 18px;
+    width: 210px;
+  }
+
+  .race-status p.m span {
+    font-size: 30px;
+  }
+
+  section.map-area .left-overlap h3 {
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+
+  .headline {
+    font-size: 34px;
+    margin-bottom: 30px;
+  }
+
+  section.award .award-grid {
+    grid-template-columns: 1fr;
+  }
+
+  section.award .award-grid .item {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    border-bottom: 1px dashed #707070;
+    padding-bottom: 30px;
+  }
+
+  section.award .award-grid .logo {
+    height: 70px;
+    margin-bottom: 10px;
+  }
+
+  section.award .award-grid .title {
+    font-size: 20px;
+    margin: 0;
+  }
+
+  section.award .award-grid .wrap {
+    margin-bottom: 10px;
+    font-size: 16px;
+    gap: 9px;
+  }
+
+  section.award .award-grid .wrap img {
+    width: 16px;
+  }
+
+  section.award .award-grid .item .bottom div:last-child img {
+    width: 12px;
+  }
+
+  section.award .award-grid .item:last-child {
+    padding: 0;
+    border: none;
+  }
+
+  .how-to-enter-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .how-to-enter-grid .item .title {
+    font-size: 24px;
+  }
+
+  .how-to-enter-grid .item {
+    padding-bottom: 20px;
+  }
+
+  .how-to-enter-grid .item .btn {
+    position: initial;
+    transform: translateX(0%);
+    width: auto;
+    margin-top: 20px;
+  }
+
+  section.have-questions h3 {
+    font-size: 28px;
+  }
+
+  section.left-image-contents h2 {
+    font-size: 30px;
+  }
+
+  footer.main-footer .left {
+    flex-wrap: wrap;
+    gap: 30px 50px;
+  }
+
+  footer.main-footer .left .logo {
+    width: 100%;
+    justify-content: center;
+  }
+
+  footer.main-footer .right {
+    grid-template-columns: 1fr;
+  }
 }
