--- a/style.css
+++ b/style.css
@@ -117,6 +117,58 @@ header.main-header .menu-wrap a:hover {
 header.main-header .menu-wrap .btn {
   color: #000;
 }
+.menu-trigger {
+  display: none;
+  gap: 0;
+  height: 25px;
+  width: 25px;
+  align-items: center;
+  cursor: pointer;
+}
+.menu-trigger span {
+  position: relative;
+  height: 2px;
+  background-color: #fff;
+  width: 25px;
+}
+header.main-header .right {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.mobile-menu-wrap {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background-color: #232121;
+  top: 0;
+  left: 0;
+  padding: 120px 20px 20px;
+  overflow: auto;
+}
+.mobile-menu-wrap .menu-wrap {
+  gap: 20px;
+  display: grid;
+}
+.mobile-menu-wrap a:not(.btn) {
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+  font-weight: 500;
+}
+.mobile-menu-wrap .btn {
+  display: none;
+}
+.mobile-menu-wrap .menu-wrap li {
+  display: inline-block;
+}
+body.m-active {
+  overflow: hidden;
+}
+.mobile-menu-wrap::-webkit-scrollbar {
+  display: none;
+}
 /*=============== Header CSS =============== */
 /*=============== Footer CSS =============== */
 footer.main-footer {
@@ -636,6 +688,10 @@ label:has(input[type='checkbox']) {
   align-items: center;
   gap: 10px;
 }
+label:has(input[type='radio']) span,
+label:has(input[type='checkbox']) span {
+  flex: 1;
+}
 form.register-form .wrap {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -662,6 +718,8 @@ section.sub-navigation .container {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  gap: 10px 30px;
+  flex-wrap: wrap;
 }
 section.sub-navigation a {
   color: #222121;
@@ -719,6 +777,11 @@ section.places-to-stays .top-area .descriptions {
   padding: 0 20px;
   background-color: #707070;
   height: 1px;
+}
+@media screen and (min-width: 1024px) {
+  .mobile-menu-wrap {
+    display: none !important;
+  }
 }
 @media screen and (max-width: 1279px) {
   section.home-hero .headline {
@@ -874,6 +937,9 @@ section.places-to-stays .top-area .descriptions {
     gap: 20px;
     font-size: 16px;
   }
+  section.sub-navigation a {
+    font-size: 20px;
+  }
 }
 @media screen and (max-width: 1023px) {
   section.home-hero .contents {
@@ -979,6 +1045,45 @@ section.places-to-stays .top-area .descriptions {
   }
   header.main-header .menu-wrap .btn {
     display: inline-flex;
+  }
+  h4 {
+    font-size: 26px;
+  }
+  .kit-list-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+  form.register-form .wrap {
+    gap: 20px;
+  }
+  h3 {
+    font-size: 32px;
+  }
+  .tagline {
+    font-size: 22px;
+    padding: 8px 20px;
+    height: 44px;
+  }
+  section.sub-navigation .container {
+    justify-content: center;
+  }
+  section.sub-navigation a {
+    padding-bottom: 5px;
+    font-size: 18px;
+  }
+  section.sub-navigation {
+    padding: 15px 0;
+  }
+  section.places-to-stays .top-area .headline {
+    font-size: 30px;
+  }
+  section.places-to-stays {
+    padding: 70px 0;
+  }
+  .places-address-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+  .menu-trigger {
+    display: grid;
   }
 }
 @media screen and (max-width: 767px) {
@@ -1148,5 +1253,96 @@ section.places-to-stays .top-area .descriptions {
 
   footer.main-footer .right {
     grid-template-columns: 1fr;
+  }
+  section.inner-hero {
+    padding: 50px 0;
+  }
+  section.inner-hero .inner {
+    padding: 30px 20px;
+  }
+  h4 {
+    font-size: 20px;
+  }
+  section.inner-hero .inner .line {
+    margin-bottom: 30px;
+  }
+  .faqs .faq .question {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .faqs .faq {
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
+  .kit-list-grid {
+    grid-template-columns: 1fr;
+  }
+  .kit-list-grid .item {
+    padding: 30px 20px;
+  }
+  section.kit-list {
+    padding: 50px 0;
+  }
+  form.register-form .wrap {
+    grid-template-columns: 1fr;
+  }
+  hr {
+    margin: 20px 0;
+  }
+  body input[type='text'],
+  body input[type='email'],
+  body input[type='url'],
+  body input[type='password'],
+  body input[type='search'],
+  body input[type='number'],
+  body input[type='tel'],
+  body input[type='range'],
+  body input[type='date'],
+  body input[type='month'],
+  body input[type='week'],
+  body input[type='time'],
+  body input[type='datetime'],
+  body input[type='datetime-local'],
+  body input[type='color'],
+  textarea {
+    height: 50px;
+  }
+  textarea {
+    height: 160px;
+  }
+  h3 {
+    font-size: 26px;
+  }
+  .tagline {
+    font-size: 18px;
+    padding: 7px 20px;
+    height: 38px;
+  }
+  .font-48 {
+    font-size: 28px;
+  }
+  section.sub-navigation a {
+    font-size: 14px;
+  }
+  section.places-to-stays .top-area .headline {
+    font-size: 24px;
+  }
+  section.places-to-stays .top-area {
+    margin-bottom: 50px;
+  }
+  section.places-to-stays {
+    padding: 50px 0;
+  }
+  .places-address-grid {
+    grid-template-columns: 1fr;
+  }
+  .places-address-grid .item {
+    padding: 30px 20px;
+  }
+  .places-address-grid .item h6 {
+    font-size: 20px;
+  }
+  .mobile-menu-wrap .btn {
+    display: inline-flex;
   }
 }
